@@ -424,9 +424,9 @@ static const char *const cxx_keywords[] =
   "__typeof__",
   "__volatile",
   "__volatile__",
-  "asm",
   "and",
   "and_eq",
+  "asm",
   "auto",
   "bitand",
   "bitor",
@@ -486,8 +486,8 @@ static const char *const cxx_keywords[] =
   "true",
   "try",
   "typedef",
-  "typename",
   "typeid",
+  "typename",
   "typeof",
   "union",
   "unsigned",
